# utc-chatbot-backend

./: .dockerignore  .gitattributes  .gitignore  API_README.md  CLAUDE.md  Dockerfile  HyDE.md  OpenWebUIFilter.py  OpenWebUIFilterV2.py  OpenwebuiSystemPrompt.md  README.md  alembic.ini  autoresearch-results.tsv  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  example.env  init-db.sh  main.py  prometheus.yml  pyproject.toml  requirements.txt  structure.md  system_prompt_no_rag.md  test_cohere_reranker.py
admin-dashboard/: index.html
alembic/: env.py
alembic/versions/: 030e3ea00953_add_reranker_logging.py  4106a4a2f015_add_tag_system_prompts.py  41344e1f8aa5_add_hyde_logs.py  440ecd494453_add_admin_users.py  46eb84522090_add_llm_responses.py  67e629debc09_add_command_to_query_logs.py  68c23f1aaa54_rename_user_id_to_email_in_query_logs.py  6edea7230754_add_debuglong_command_to_query_logs.py  a1b2c3d4e5f6_add_search_follow_up_commands.py  af41a58144ab_add_query_results.py  bff14a8411a7_add_article_metadata_fields.py  e93e7b757904_add_hyde_to_search_methods.py  f6c4e9a6ae4d_initial_schema.py
api/: __init__.py  auth.py  dependencies.py  main.py
api/middleware/: auth.py
api/models/: __init__.py  chat.py  requests.py  responses.py
api/routers/: __init__.py  admin_analytics.py  admin_prompts.py  auth.py  health.py  openai_compat.py  query_logs.py  search.py
api/routes/: admin.py  chat.py  openai_compat.py  search.py
api/services/: analytics.py
api/templates/: admin_analytics.html  admin_login.html  admin_prompts.html
api/utils/: __init__.py  connection_pool.py  hybrid_search.py  prompt_resolution.py
core/: api_client.py  bm25_search.py  chat_service.py  config.py  embedding.py  hyde_generator.py  ingestion.py  pipeline.py  processing.py  reranker.py  schemas.py  storage_admin_user.py  storage_base.py  storage_cache_metrics.py  storage_chunk.py  storage_hyde_log.py  storage_prompt.py  storage_query_log.py  storage_raw.py  storage_reranker_log.py  storage_vector.py  tokenizer.py  vector_search.py
debug/260320-debug-api/: debug-results.tsv  eliminated.md  findings.md  summary.md
debug/260320-debug-core/: debug-results.tsv  eliminated.md  findings.md  summary.md
debug/260321-debug-api-recent-commits/: debug-results.tsv  eliminated.md  findings.md  summary.md
docs/: code-standards.md  code_review.md  codebase-summary.md  deployment-guide.md  project-overview-pdr.md  system-architecture.md
docs/superpowers/plans/: 2026-03-20-admin-auth.md  2026-03-20-openai-compat-endpoint.md
docs/superpowers/specs/: 2026-03-17-utc-litellm-client-design.md  2026-03-20-admin-auth-design.md  2026-03-20-openai-compat-endpoint-design.md
examples/: bm25_search_example.py  vector_search_example.py
fix/260320-debug-api-fixes/: fix-results.tsv  summary.md
fix/260321-api-debug-fixes/: fix-results.tsv  summary.md
learn/260320-2356-init/: learn-results.tsv  summary.md
qa/: dataset_generation.py  eval_dataset.py  eval_metrics.py  eval_runner.py  evaluate_pipeline.py  load_test.py  param_sweep.py  run_log.tsv
tests/: conftest.py  test_admin_auth_integration.py  test_auth.py  test_bm25_search.py  test_bootstrap.py  test_chat_models.py  test_chat_service.py  test_config_auth.py  test_config_chat.py  test_create_admin.py  test_embedding.py  test_eval_dataset.py  test_eval_metrics.py  test_eval_runner.py  test_ingestion.py  test_logger.py  test_openai_compat.py  test_param_sweep.py  test_pipeline.py  test_processing.py  test_prompt_resolution.py  test_reranker.py  test_router_auth.py  test_storage.py  test_storage_admin_user.py  test_storage_cache_metrics.py  test_storage_query_log.py  test_storage_vector.py  test_vector_search.py
uml_diagrams/: database_schema_uml.puml  project_uml.puml
utils/: api_client.py  bootstrap_db.py  generate_qa_dataset.py  logger.py
