[project]
name = "backend"
version = "1.0.0"
description = "Backend for the UTC IT Helpdesk Chatbot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "backports-tarfile==1.2.0",
    "build==1.3.0",
    "cachecontrol==0.14.4",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "cleo==2.1.0",
    "colorama==0.4.6",
    "crashtest==0.4.1",
    "distlib==0.4.0",
    "dulwich==0.24.10",
    "fastjsonschema==2.21.2",
    "filelock==3.20.0",
    "findpython==0.7.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "importlib-metadata==8.7.0",
    "iniconfig==2.3.0",
    "installer==0.7.0",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.0.1",
    "jaraco-functools==4.3.0",
    "keyring==25.7.0",
    "more-itertools==10.8.0",
    "msgpack==1.1.2",
    "packaging==25.0",
    "pbs-installer==2025.11.20",
    "pip==25.3",
    "pkginfo==1.12.1.2",
    "platformdirs==4.5.0",
    "pluggy==1.6.0",
    "poetry==2.2.1",
    "poetry-core==2.2.1",
    "psycopg==3.3.0",
    "psycopg-binary==3.3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pygments==2.19.2",
    "pyproject-hooks==1.2.0",
    "pytest==9.0.1",
    "pytest-mock==3.15.1",
    "python-dotenv==1.2.1",
    "pywin32-ctypes==0.2.3",
    "rapidfuzz==3.14.3",
    "ratelimit==2.2.1",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "ruff==0.14.7",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "tomlkit==0.13.3",
    "trove-classifiers==2025.12.1.14",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "virtualenv==20.35.4",
    "webhook-sender",
    "wheel==0.45.1",
    "zipp==3.23.0",
    "zstandard==0.25.0",
]

[tool.uv.sources]
webhook-sender = { git = "ssh://git@itcode.utc.edu/di/webhooks.git", rev = "f489eab7ef0126341746d7ec34381c699bf6d470" }
