[project]
name = "backend"
version = "1.1.0"
description = "Backend for the UTC IT Helpdesk Chatbot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.18.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "backports-tarfile==1.2.0",
    "beautifulsoup4==4.14.3",
    "boto3==1.42.7",
    "botocore==1.42.7",
    "build==1.3.0",
    "cachecontrol==0.14.4",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "cleo==2.1.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "colored==2.3.1",
    "crashtest==0.4.1",
    "distlib==0.4.0",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "dulwich==0.24.10",
    "email-validator==2.3.0",
    "fastapi==0.124.4",
    "fastapi-cli==0.0.16",
    "fastapi-cloud-cli==0.6.0",
    "fastar==0.8.0",
    "fastjsonschema==2.21.2",
    "filelock==3.20.0",
    "findpython==0.7.1",
    "greenlet==3.3.1",
    "h11==0.16.0",
    "html2text==2025.4.15",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "importlib-metadata==8.7.0",
    "iniconfig==2.3.0",
    "installer==0.7.0",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.0.1",
    "jaraco-functools==4.3.0",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "jmespath==1.0.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "keyring==25.7.0",
    "langchain==1.1.3",
    "langchain-core==1.1.3",
    "langchain-text-splitters==1.0.0",
    "langgraph==1.0.4",
    "langgraph-checkpoint==3.0.1",
    "langgraph-prebuilt==1.0.5",
    "langgraph-sdk==0.2.15",
    "langsmith==0.4.58",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "more-itertools==10.8.0",
    "msgpack==1.1.2",
    "numpy==2.4.1",
    "openai==2.9.0",
    "orjson==3.11.5",
    "ormsgpack==1.12.0",
    "packaging==25.0",
    "pbs-installer==2025.11.20",
    "pip==25.3",
    "pkginfo==1.12.1.2",
    "platformdirs==4.5.0",
    "pluggy==1.6.0",
    "poetry==2.2.1",
    "poetry-core==2.2.1",
    "psycopg==3.3.0",
    "psycopg-binary==3.3.0",
    "psycopg-pool==3.3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pygments==2.19.2",
    "pyproject-hooks==1.2.0",
    "pytest==9.0.1",
    "pytest-mock==3.15.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "pywin32-ctypes==0.2.3",
    "pyyaml==6.0.3",
    "rank-bm25==0.2.2",
    "rapidfuzz==3.14.3",
    "ratelimit==2.2.1",
    "regex==2025.11.3",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rich==14.2.0",
    "rich-toolkit==0.17.0",
    "rignore==0.7.6",
    "ruff==0.14.7",
    "s3transfer==0.16.0",
    "sentry-sdk==2.47.0",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "sqlalchemy==2.0.46",
    "starlette==0.50.0",
    "tenacity==9.1.2",
    "tiktoken==0.12.0",
    "tomlkit==0.13.3",
    "tqdm==4.67.1",
    "trove-classifiers==2025.12.1.14",
    "typer==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uuid-utils==0.12.0",
    "uvicorn==0.38.0",
    "virtualenv==20.35.4",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
    "wheel==0.45.1",
    "xxhash==3.6.0",
    "zipp==3.23.0",
    "zstandard==0.25.0",
]
